# outlook-ai

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  test_debug.py
src/outlook_ai/: __init__.py  __main__.py  ai.py  auth.py  cache.py  cli.py  config.py  graph.py  mail.py  models.py  prompts.py  utils.py  vip.py
src/outlook_ai/integrations/: __init__.py  calendar.py  notion.py  telegram.py  wechat.py
tests/: __init__.py  test_ai.py  test_cache.py  test_graph.py  test_mail.py  test_telegram.py  test_vip.py
